@@ -10,6 +10,7 @@ v2.0.7
 ! same reason, just a couple of days later: imdb rating
 ! imdb_person class: filmografies no longer listed movie names due to site changes
 * imdb_person class: character names w/o id are listed again in filmografies
+! IMDB started to sometimes pre- or postfix movie titles with "IMDb", becoming part of the title then
 
 v2.0.6 (08.07.2011)
 -------------------
